# snap

./: MQTTApp_Release_Note  SConscript  mkbuild.sh
DeviceMgmt/: DMA_Macros.h  DO_Release_Note  SConscript  ServiceProvider.cc  ServiceProvider.h  dmaController.cpp  dmaController.h  main.cpp  manageConfiguration.cpp  manageConfiguration.h  packageName.json  refDMA.conf  refDMAMQTT.conf
DeviceMgmt/DeviceObject/: DeviceObj.cc  DeviceObj.h  TransportWrapper.cc  TransportWrapper.h
DeviceMgmt/ShadowController/Gtest/: CMakeLists.txt  json.example
DeviceMgmt/ShadowController/Gtest/ShadowControllerTestCases/: CMakeLists.txt  SCSetDevice.cc  ScSetDeviceTests.cc  ShBCreateCommandTests.cc  ShConstructorTests.cc  ShSetDevice.cc
DeviceMgmt/ShadowController/Gtest/googleFiles/googletest/: cmake_install.cmake
DeviceMgmt/ShadowController/Gtest/googleFiles/googletest/src/: SConscript
DeviceMgmt/ShadowController/analysis/: 0.html  1.html  2.html  3.html  4.html  5.html  analysis.xml  index.html
DeviceMgmt/ShadowController/doxyGenDocs/: mainpage.docx  mainpage.txt  pocraml.txt
DeviceMgmt/ShadowController/payloads/: AppResponse  CloudResponse  PropertiesVariety  ShadowCommands  TypicalSnapShot_Shadow
DeviceMgmt/ShadowController/src/: RamlficationsParser.py  pybindingcpp.cc  pybindingcpp.h  ramlparserpycpp.cc  ramlparserpycpp.h  shadow.cc  shadow.h  shadowcontroller.cc  shadowcontroller.h
DeviceMgmt/ShadowController/unusedFiles/: OPC_raml.txt  main.test
DeviceMgmt/Unuse/: AsyncTaskPool.cc  AsyncTaskPool.h  CMakeLists.txt  HackRouterManager.cpp  HackRouterManager.h  commandbase.h  commands.cpp  commands.h  configSensorManager.cpp  configSensorManager.h  dataTaskHandler.cpp  dataTaskHandler.h  deviceInfo.cpp  deviceInfo.h  devicespecificcommands.cpp  devicespecificcommands.h  requestManager.cpp  requestManager.h  requestTaskHandler.cpp  requestTaskHandler.h
DeviceMgmt/pythonLibs_ramlfication/: install.sh
JsonPayload/: JsonPayload.md
Mqtt/: .cproject  0.html  1.html  2.html  3.html  4.html  5.html  6.html  7.html  MqttApi.cc  MqttApi.h  SConscript  alljoynWrapper.cc  alljoynWrapper.h  analysis.xml  cloudEndpoint.cc  cloudEndpoint.h  cloudWrapper.cc  cloudWrapper.h  configuration.h  directoryOPS.h  index.html  jsonCheck.hpp  main.cc  mqttBusObject.cc  mqttBusObject.h  packageName.json  queueMgmt.cc  queueMgmt.h  stats.html
SCA_Report/: 0.html  1.html  10.html  11.html  12.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html  index.html
documents/: JsonPayload.html  MQTTApp.ppt  topics.html
package/: MQTTAppMQTT.conf  gatewayDtl.conf  install.sh  packageName.json
topics/: topics.md
unitTestCases/: CMakeLists.txt
unitTestCases/MQTTAppTestCases/: connectMqtt.cc  connectMqttTestCase  disconnectMqtt.cc  disconnectMqttTestCase  publishMqtt.cc  publishMqttTestCase  run.sh  subscribeMqtt.cc  subscribeMqttTestCase  unsubscribe.cc  unsubscribeMqttTestCase
unitTestCases/googleFiles/googletest/: Makefile
(+240 files in other folders)
